Details
-
Bug
-
Status: Resolved
-
Minor
-
Resolution: Fixed
-
None
-
None
-
ghx-label-11
Description
Compiling impala on arm64 fails with an error of redefined FORCE_INLINE preprocessor macro:
{{/home/spop/impala/be/src/util/sse2neon.h:48: error: "FORCE_INLINE" redefined [-Werror]
48 | #define FORCE_INLINE static inline {}attribute{}((always_inline))
|
In file included from /home/spop/impala/be/src/codegen/llvm-codegen-cache.h:30,
from /home/spop/impala/be/src/runtime/exec-env.cc:27:
/home/spop/impala/be/src/thirdparty/datasketches/MurmurHash3.h:45: note: this is the location of the previous definition
45 | #define FORCE_INLINE inline {}attribute{}((always_inline))
|
}}