IMPALA-12119: rename FORCE_INLINE to avoid name collision

Compiling impala on arm64 fails with an error of redefined FORCE_INLINE
preprocessor macro:

/home/spop/impala/be/src/util/sse2neon.h:48: error: "FORCE_INLINE" redefined [-Werror]
   48 | #define FORCE_INLINE static inline {}attribute{}((always_inline))
      |
In file included from /home/spop/impala/be/src/codegen/llvm-codegen-cache.h:30,
                 from /home/spop/impala/be/src/runtime/exec-env.cc:27:
/home/spop/impala/be/src/thirdparty/datasketches/MurmurHash3.h:45: note: this is the location of the previous definition
   45 | #define FORCE_INLINE inline {}attribute{}((always_inline))
      |

This patch renames FORCE_INLINE in MurmurHash3.h following the patch
in datasketches:
https://github.com/apache/datasketches-cpp/commit/0d8a17de0dc18493eb17e6613ad1534d6ff247b7

Change-Id: I78205eba25628a7f526208231aa4ff06c6d746af
Reviewed-on: http://gerrit.cloudera.org:8080/19839
Reviewed-by: Daniel Becker <daniel.becker@cloudera.com>
Reviewed-by: Joe McDonnell <joemcdonnell@cloudera.com>
Tested-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>